--- a/src/JsOidc/wwwroot/index.html
+++ b/src/JsOidc/wwwroot/index.html
@@ -71,11 +71,11 @@
         </div>
     </div>
 
-    <script src="libs/oidc-token-manager.js"></script>
+    <script src="libs/oidc-client.js"></script>
 
     <script>
         var config = {
-            authority: "http://192.168.99.100:22530/",
+            authority: "http://localhost:1941/",
             client_id: "js_oidc",
             redirect_uri: window.location.protocol + "//" + window.location.host + "/index.html",
             post_logout_redirect_uri: window.location.protocol + "//" + window.location.host + "/index.html",
@@ -86,26 +86,29 @@
             scope: "openid profile email api1",
 
             // this will toggle if profile endpoint is used
-            load_user_profile: true,
+            loadUserInfo: true,
 
             // silent renew will get a new access_token via an iframe 
             // just prior to the old access_token expiring (60 seconds prior)
             silent_redirect_uri: window.location.protocol + "//" + window.location.host + "/silent_renew.html",
-            silent_renew: false,
+            automaticSilentRenew: false,
 
             // this will allow all the OIDC protocol claims to be visible in the window. normally a client app 
             // wouldn't care about them or want them taking up space
-            filter_protocol_claims: false
+            filterProtocolClaims: false
         };
 
-        var mgr = new OidcTokenManager(config);
+        var mgr = new Oidc.UserManager(config);
 
-        mgr.addOnTokenObtained(function () {
-            console.log("token obtained");
+        mgr.events.addUserLoaded(function () {
+            console.log("user/token loaded");
         });
-        mgr.addOnTokenRemoved(function () {
+        mgr.events.addUserUnloaded(function () {
             display("#response", { message: "Logged Out" });
             showTokens();
+        });
+        mgr.events.addSilentRenewError(function (err) {
+            display("#response", { message: "Silent renew error: " +  err.message});
         });
 
         function display(selector, data) {
@@ -119,14 +122,21 @@
         }
 
         function showTokens() {
-            display("#id-token", mgr.profile || "");
-            display("#access-token", mgr.access_token && { access_token: mgr.access_token, expires_in: mgr.expires_in } || "");
-            checkSessionState();
+            mgr.getUser().then(function (user) {
+                if (user) {
+                    display("#id-token", user.profile || "");
+                    display("#access-token", user.access_token && { access_token: user.access_token, expires_in: user.expires_in } || "");
+                    checkSessionState();
+                }
+                else {
+                    display("#response", { message: "Not logged in"});
+                }
+            });
         }
         showTokens();
 
         function handleCallback() {
-            mgr.processTokenCallbackAsync().then(function () {
+            mgr.signinRedirectCallback().then(function (user) {
                 var hash = window.location.hash.substr(1);
                 var result = hash.split('&').reduce(function (result, item) {
                     var parts = item.split('=');
@@ -142,44 +152,44 @@
         }
 
         function authorize(scope, response_type) {
-            config.scope = scope;
-            config.response_type = response_type;
-            mgr.redirectForToken();
+            mgr.signinRedirect({scope:scope, response_type:response_type});
         }
 
         function logout() {
-            mgr.redirectForLogout();
+            mgr.signoutRedirect();
         }
 
         function callApi() {
-            var xhr = new XMLHttpRequest();
-            xhr.onload = function (e) {
-                if (xhr.status >= 400) {
+            mgr.getUser().then(function (user) {
+                var xhr = new XMLHttpRequest();
+                xhr.onload = function (e) {
+                    if (xhr.status >= 400) {
+                        display("#ajax-result", {
+                            status: xhr.status,
+                            statusText: xhr.statusText,
+                            wwwAuthenticate: xhr.getResponseHeader("WWW-Authenticate")
+                        });
+                    }
+                    else {
+                        display("#ajax-result", xhr.response);
+                    }
+                };
+                xhr.onerror = function () {
+                    if (xhr.status === 401) {
+                        mgr.removeToken();
+                        showTokens();
+                    }
+
                     display("#ajax-result", {
                         status: xhr.status,
                         statusText: xhr.statusText,
                         wwwAuthenticate: xhr.getResponseHeader("WWW-Authenticate")
                     });
-                }
-                else {
-                    display("#ajax-result", xhr.response);
-                }
-            };
-            xhr.onerror = function () {
-                if (xhr.status === 401) {
-                    mgr.removeToken();
-                    showTokens();
-                }
-
-                display("#ajax-result", {
-                    status: xhr.status,
-                    statusText: xhr.statusText,
-                    wwwAuthenticate: xhr.getResponseHeader("WWW-Authenticate")
-                });
-            };
-            xhr.open("GET", "http://192.168.99.100:3860/identity", true);
-            xhr.setRequestHeader("Authorization", "Bearer " + mgr.access_token);
-            xhr.send();
+                };
+                xhr.open("GET", "http://localhost:3721/identity", true);
+                xhr.setRequestHeader("Authorization", "Bearer " + user.access_token);
+                xhr.send();
+            });
         }
 
         if (window.location.hash) {
@@ -196,29 +206,30 @@
         document.querySelector(".logout").addEventListener("click", logout, false);
 
         function checkSessionState() {
-            mgr.oidcClient.loadMetadataAsync().then(function (meta) {
-                if (meta.check_session_iframe && mgr.session_state) {
-                    document.getElementById("rp").src = "check_session.html#" + 
-                        "session_state=" + mgr.session_state +
-                        "&check_session_iframe=" + meta.check_session_iframe +
-                        "&client_id=" + config.client_id
-                    ;
-                }
-                else {
-                    document.getElementById("rp").src = "about:blank";
-                }
+            mgr.metadataService.getCheckSessionIframe().then(function (check_session_iframe) {
+                mgr.getUser().then(function (user) {
+                    if (check_session_iframe && user.session_state) {
+                        document.getElementById("rp").src = "check_session.html#" +
+                            "session_state=" + user.session_state +
+                            "&check_session_iframe=" + check_session_iframe +
+                            "&client_id=" + mgr.settings.client_id
+                        ;
+                    }
+                    else {
+                        document.getElementById("rp").src = "about:blank";
+                    }
+                });
             });
         }
         window.onmessage = function (e) {
             if (e.origin === window.location.protocol + "//" + window.location.host && e.data === "changed") {
-                mgr.removeToken();
-                //config.scope = "openid";
-                //config.response_type = "id_token";
-                //mgr.renewTokenSilentAsync().then(function () {
-                //    console.log("renewTokenSilentAsync success");
-                //}, function () {
-                //    console.log("renewTokenSilentAsync failed");
-                //});
+                mgr.removeUser().then(function () {
+                    mgr.signinSilent().then(function (user) {
+                        console.log("renewTokenSilentAsync success");
+                    }).catch(function () {
+                        console.log("renewTokenSilentAsync failed");
+                    });
+                });
             }
         }
     </script>
